# elara-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: branch-name.yml  ci.yml  commitlint.yml  semantic-pr-title.yml
apps/api/: main.py
apps/web/: eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/worker/: runner.py
deploy/: docker-compose.yml
docs/architecture/: dual-mode-core.md
docs/brainstorms/: 2026-02-10-agent-native-companion-platform-brainstorm.md
todos/: 001-complete-p1-phase1-foundation-scaffold.md  002-complete-p1-phase2-dual-mode-core.md  003-complete-p1-phase3-security-operability.md  004-complete-p2-phase4-docs-polish.md  005-complete-p1-auth-header-defaults-allow-owner-bypass.md  006-pending-p1-event-replay-leaks-cross-workspace-data.md  007-complete-p1-approval-decision-not-scoped-to-workspace.md  008-complete-p2-invitation-tokens-exposed-in-audit-metadata.md  009-complete-p3-todo-filename-status-mismatch.md  010-complete-p1-phase5-gap-closure-execution.md  011-complete-p1-replay-access-allows-legacy-runs-without-acl.md  012-complete-p2-workspace-membership-is-not-restored-after-restart.md  013-complete-p3-web-coverage-gate-uses-filename-matching-instead-of-execution.md  014-complete-p1-persist-workspace-owner-across-restarts.md  015-complete-p2-web-e2e-job-does-not-exercise-application-routes.md  016-complete-p2-supabase-rls-gate-is-app-authz-test-not-db-rls.md  017-complete-p1-release-please-governance-rollout.md  018-complete-p2-consolidate-v0-1-plan-ownership.md  019-complete-p2-reconcile-branch-protection-checklist-drift.md
(+91 files in other folders)
