[project]
name = "elara-ai"
version = "0.1.0"
description = "Agent-native dual-mode companion platform scaffold"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<1.0",
  "cryptography>=44,<45",
  "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "ruff>=0.9,<1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
