[project]
name = "elara-ai"
version = "0.1.0"
description = "Agent-native dual-mode companion platform scaffold"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<1.0",
  "cryptography>=44,<45",
  "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "coverage>=7.10,<8.0",
  "httpx>=0.28,<1.0",
  "mypy>=1.18,<2.0",
  "ruff>=0.9,<1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
files = [
  "apps/api/main.py",
  "apps/api/agents",
  "apps/api/db",
  "apps/api/events",
  "apps/api/memory",
  "apps/api/security",
  "apps/worker",
]

[tool.coverage.run]
source = ["apps/api"]
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
